Fix scrolling and header alignment between pages

--- a/app/styles/index.css
+++ b/app/styles/index.css
@@ -1,3 +1,12 @@
+article {
+    bottom: 0;
+    left: 0;
+    overflow: auto;
+    position: absolute;
+    right: 0;
+    top: 110px;
+}
+
 body {
     color: white;
     font-family: 'Helvetica Neue LT Pro';
